--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyPageFragment">
+    tools:context=".Tab1">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="50dp"
-        android:text="마이페이지" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
