--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,15 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+<!--    <color name="black">#FF000000</color>-->
     <color name="white">#FFFFFFFF</color>
+
+    <color name="key">#FF6200EE</color>
+    <color name="highlight">#FF12B886</color>
+    <color name="black">#FF212529</color>
+    <color name="light_gray">#FFF1F3F5</color>
+    <color name="gray">#FFCED4DA</color>
+    <color name="dark_gray">#FF868E96</color>
 
     <color name="Gold">#F4E665</color>
 </resources>
