--- a/app/src/main/res/layout/dialog_image.xml
+++ b/app/src/main/res/layout/dialog_image.xml
@@ -1,15 +1,27 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="16dp"
+    android:background="@android:color/transparent">
 
-    <ImageView
-        android:id="@+id/dialogImageView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitCenter"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello"/>
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/dialogImageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"/>
+
+        <TextView
+            android:id="@+id/dialogTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hello"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginTop="20dp"/>
+
+    </LinearLayout>
 
 </FrameLayout>
