--- a/app/src/main/res/layout/view_item.xml
+++ b/app/src/main/res/layout/view_item.xml
@@ -8,11 +8,11 @@
     android:background="@color/purple_500"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
+    <ImageView
         android:id="@+id/tv_rv_photo"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:text="image자리"
+
         android:src="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
