--- a/app/src/main/res/layout/dialog_image.xml
+++ b/app/src/main/res/layout/dialog_image.xml
@@ -10,8 +10,8 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/dialogImageView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:scaleType="centerCrop"/>
 
         <TextView
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello"
-            android:layout_gravity="center_horizontal|bottom"
+            android:layout_gravity="bottom"
             android:layout_marginTop="20dp"/>
 
     </LinearLayout>
