--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Tab2">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/fragment2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,17 +14,21 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:elevation="20dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_marginEnd="16dp"
-                android:gravity="center_vertical|bottom">
+                android:gravity="center_vertical">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Gallery"
+                    android:text="갤러리"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="25dp"/>
@@ -32,18 +36,30 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1"/>
-                <TextView
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Hello!"-->
+<!--                    android:textColor="@color/highlight"-->
+<!--                    android:textSize="20dp"/>-->
+                <Spinner
+                    android:id="@+id/placeSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hello!"
-                    android:textColor="@color/highlight"
-                    android:textSize="20dp"/>
+                    android:padding="8dp"
+                    android:gravity="start"
+                    android:background="@drawable/profile_rounded_corner"/>
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
+        <android.widget.Space
+            android:layout_width="0dp"
+            android:layout_height="16dp"/>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar">
+            android:layout_below="@id/toolbar"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp">
             <GridLayout
                 android:id="@+id/gridview"
                 android:layout_width="match_parent"
@@ -52,22 +68,16 @@
                 android:padding="16dp"
                 android:alignmentMode="alignMargins"
                 android:columnOrderPreserved="false">
-<!--                <ImageView-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="0dp"-->
-<!--                    android:layout_columnWeight="1"-->
-<!--                    android:layout_rowWeight="1"-->
-<!--                    android:scaleType="centerInside"-->
-<!--                    android:src="@drawable/image_choonsik3"/>-->
             </GridLayout>
         </ScrollView>
-    </RelativeLayout>
+    </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:tint="@color/highlight"
         app:srcCompat="@android:drawable/ic_input_add" />
 
 </FrameLayout>
