--- a/app/src/main/res/layout/image_input.xml
+++ b/app/src/main/res/layout/image_input.xml
@@ -14,14 +14,43 @@
             android:layout_height="300dp"
             android:scaleType="centerCrop"/>
 
-        <TextView
-            android:id="@+id/settingTextView"
+        <EditText
+            android:id="@+id/inputEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="장소"
+            android:layout_marginTop="16dp"/>
+        <RatingBar
+            android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="20dp"/>
+            android:numStars="5"
+            android:stepSize="1.0"
+            android:layout_marginTop="16dp"/>
 
+<!--        <Spinner-->
+<!--            android:id="@+id/optionsSpinner"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:entries="@array/options_array" />-->
+
+        <Button
+            android:id="@+id/peopleButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select People"
+            android:layout_marginTop="16dp" />
+
+        <Button
+            android:id="@+id/saveButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:layout_gravity="bottom|end"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"/>
     </LinearLayout>
 
 </FrameLayout>
