--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorOnSecondary</item>
+
+        <item name="android:fontFamily">@font/gothic_a1_medium</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
