--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -42,6 +42,11 @@
 <!--                    android:text="Hello!"-->
 <!--                    android:textColor="@color/highlight"-->
 <!--                    android:textSize="20dp"/>-->
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/gpsButton"
+                    android:text="GPS"/>
                 <Spinner
                     android:id="@+id/placeSpinner"
                     android:layout_width="wrap_content"
