--- a/app/src/main/res/layout/dialog_image.xml
+++ b/app/src/main/res/layout/dialog_image.xml
@@ -13,7 +13,15 @@
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:scaleType="centerCrop"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/dialogTitleTextView"
+            android:text="Title"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="20dp"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
         <TextView
             android:id="@+id/dialogTextView"
             android:layout_width="wrap_content"
