--- a/app/src/main/res/layout/image_input.xml
+++ b/app/src/main/res/layout/image_input.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="장소"
+            android:hint="제목"
             android:layout_marginTop="16dp"/>
         <RatingBar
             android:id="@+id/ratingBar"
