--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -1,92 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:layout_marginTop="90dp"
     android:orientation="vertical"
     tools:context=".EditActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="1dp"
+        android:background="@android:color/transparent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <ImageButton
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:background="@android:color/transparent"
+                android:elevation="20dp"
+                android:paddingLeft="8dp"
+                android:paddingTop="16dp"
+                app:tint="@color/black"
+                android:src="@drawable/outline_arrow_back_ios_24"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+<!--            <ImageButton-->
+<!--                android:id="@+id/edit"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/shape"-->
+<!--                android:src="@drawable/baseline_create_24"-->
+<!--                app:tint="@color/button_tint_selector"-->
+<!--                app:layout_constraintStart_toEndOf="@id/call_message"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"/>-->
+            <Button
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:text="저장"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:paddingRight="24dp"
+                android:paddingTop="16dp"/>
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <ImageView
-        android:id="@+id/editUserImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"/>
+        android:id="@+id/backgroundUserImage"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/image_choonsik3"/>
+    <View
+        android:id="@+id/gradientView"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/gradient_background" />
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp">
-
+        android:layout_marginTop="250dp"
+        android:orientation="vertical">
         <ImageView
-            android:id="@+id/baseline_person"
+            android:id="@+id/editUserImage"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"/>
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/baseline_person_24" />
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="10dp"
+            android:layout_marginTop="10dp"/>
 
         <EditText
             android:id="@+id/editUserName"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toRightOf="@+id/baseline_person"
-            android:layout_marginLeft="20dp"
-            android:textSize="20dp"
-            android:hint="이름을 입력하세요."/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/baseline_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/baseline_phone_24"/>
-
+            android:textColor="@color/black"
+            android:textSize="35dp"
+            android:textStyle="bold"
+            android:layout_gravity="center"/>
 
         <EditText
             android:id="@+id/editPhone"
-            android:layout_width="180dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            app:layout_constraintLeft_toRightOf="@+id/baseline_phone"
-            android:layout_marginLeft="20dp"
-            android:hint="전화번호를 입력하세요."/>
+            android:textColor="@color/dark_gray"
+            android:textSize="25dp"
+            android:layout_gravity="center"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="30dp">-->
 
-    <TextView
-        android:id="@+id/userId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:layout_gravity="center"/>
+<!--            <ImageView-->
+<!--                android:id="@+id/baseline_person"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/baseline_person_24" />-->
 
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center"
-        android:text="저장"/>
+<!--            <EditText-->
+<!--                android:id="@+id/editUserName"-->
+<!--                android:layout_width="180dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintLeft_toRightOf="@+id/baseline_person"-->
+<!--                android:layout_marginLeft="20dp"-->
+<!--                android:textSize="20dp"-->
+<!--                android:hint="이름을 입력하세요."/>-->
 
-    <Button
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/baseline_phone"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/baseline_phone_24"/>-->
+
+<!--            <EditText-->
+<!--                android:id="@+id/editPhone"-->
+<!--                android:layout_width="180dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:textSize="20dp"-->
+<!--                app:layout_constraintLeft_toRightOf="@+id/baseline_phone"-->
+<!--                android:layout_marginLeft="20dp"-->
+<!--                android:hint="전화번호를 입력하세요."/>-->
+
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="50dp">
+<!--            <TextView-->
+<!--                android:id="@+id/userId"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="20dp"-->
+<!--                android:layout_gravity="center"/>-->
+<!--            <Button-->
+<!--                android:id="@+id/deleteButton"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:background="@drawable/circle_background"-->
+<!--                android:text="삭제"/>-->
+<!--            <ImageButton-->
+<!--                android:id="@+id/deleteButton"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:background="@drawable/circle_background"-->
+<!--                android:padding="8dp"-->
+<!--                android:src="@drawable/outline_delete_24"/>-->
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <ImageButton
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center"
-        android:text="삭제"/>
+        android:layout_gravity="center|bottom"
+        android:background="@drawable/circle_background"
+        android:padding="12dp"
+        android:layout_marginBottom="32dp"
+        android:src="@drawable/outline_delete_24"/>
 
 
-
-
-</LinearLayout>
+</FrameLayout>
