--- a/app/src/main/res/layout/activity_profile_sub.xml
+++ b/app/src/main/res/layout/activity_profile_sub.xml
@@ -1,79 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:layout_marginTop="90dp"
     android:orientation="vertical"
+    android:background="@android:color/transparent"
     tools:context=".ProfileSubActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="1dp"
+        android:background="@android:color/transparent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <ImageButton
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:background="@android:color/transparent"
+                android:elevation="20dp"
+                android:paddingLeft="8dp"
+                android:paddingTop="16dp"
+                app:tint="@color/black"
+                android:src="@drawable/outline_arrow_back_ios_24"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+<!--            <ImageButton-->
+<!--                android:id="@+id/edit"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/shape"-->
+<!--                android:src="@drawable/baseline_create_24"-->
+<!--                app:tint="@color/button_tint_selector"-->
+<!--                android:paddingRight="8dp"-->
+<!--                android:paddingTop="16dp"/>-->
+            <Button
+                android:id="@+id/edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="편집"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:paddingRight="24dp"
+                android:paddingTop="16dp"/>
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <ImageView
-        android:id="@+id/userImage"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"/>
-    <TextView
-        android:id="@+id/userId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:layout_marginTop="30dp"/>
-
-    <TextView
-        android:id="@+id/textViewName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_gravity="center"/>
-
-    <TextView
-        android:id="@+id/textViewPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:layout_gravity="center"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/backgroundUserImage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp">
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/image_choonsik3"/>
+    <View
+        android:id="@+id/gradientView"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/gradient_background" />
 
-        <ImageButton
-            android:id="@+id/call_phone"
-            android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/userImage"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"/>
+        <TextView
+            android:id="@+id/userId"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape"
-            android:src="@drawable/baseline_phone_24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/call_message"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="10dp"
+            android:layout_marginTop="10dp"/>
 
-        <ImageButton
-            android:id="@+id/call_message"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/textViewName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape"
-            android:src="@drawable/baseline_message_24"
-            app:layout_constraintStart_toEndOf="@id/call_phone"
-            app:layout_constraintEnd_toStartOf="@id/edit"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:textColor="@color/black"
+            android:textSize="35dp"
+            android:textStyle="bold"
+            android:layout_gravity="center"/>
 
-        <ImageButton
-            android:id="@+id/edit"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/textViewPhone"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape"
-            android:src="@drawable/baseline_create_24"
-            app:layout_constraintStart_toEndOf="@id/call_message"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:textColor="@color/dark_gray"
+            android:textSize="25dp"
+            android:layout_gravity="center"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginTop="50dp">
 
-</LinearLayout>
+            <ImageButton
+                android:id="@+id/call_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape"
+                android:src="@drawable/baseline_phone_24"
+                android:layout_marginRight="32dp"
+                app:tint="@color/button_tint_selector"/>
+
+            <ImageButton
+                android:id="@+id/call_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape"
+                android:src="@drawable/baseline_message_24"
+                app:tint="@color/button_tint_selector"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+</FrameLayout>
