--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -38,7 +38,7 @@
                     android:textStyle="bold"
                     android:textSize="25dp"/>
                 <android.widget.Space
-                    android:layout_width="16dp"
+                    android:layout_width="20dp"
                     android:layout_height="0dp"/>
                 <TextView
                     android:id="@+id/calendarYear"
@@ -46,11 +46,18 @@
                     android:layout_height="wrap_content"
                     android:text="년"
                     android:textColor="@color/white"
-                    android:textSize="15dp"/>
+                    android:textSize="20dp"/>
                 <android.widget.Space
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1"/>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/buttonDateToday"
+                    android:text="오늘"
+                    android:background="@android:color/transparent"
+                    android:textSize="16dp"/>
                 <ImageButton
                     android:id="@+id/buttonDatePicker"
                     android:layout_width="wrap_content"
