--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -49,10 +49,10 @@
 <!--                    android:text="GPS"/>-->
                 <Spinner
                     android:id="@+id/placeSpinner"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:padding="8dp"
-                    android:gravity="start"
+                    android:gravity="center"
                     android:background="@drawable/profile_rounded_corner"/>
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
