--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:paddingHorizontal="12dp"
+    android:paddingVertical="12dp"
+    android:layout_marginBottom="4dp"
+    android:background="@drawable/profile_rounded_corner">
     <CheckBox
         android:id="@+id/profile_checkbox"
         android:layout_width="wrap_content"
@@ -12,12 +15,12 @@
         android:id="@+id/profile_image"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@drawable/ic_home" /> <!-- 예시 이미지, 실제 이미지로 교체해야 함 -->
+        android:background="@drawable/profile_image_rounded_corner" />
 
     <TextView
         android:id="@+id/profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Profile Name" />
+        android:text="이름" />
 </LinearLayout>
