--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,9 @@
     <style name="CalenderViewHeaderCustomText">
         <item name="android:visibility">invisible</item>
     </style>
+
+    <!-- Splash theme. -->
+<!--    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
+<!--        <item name="android:windowBackground">@drawable/splash_background</item>-->
+<!--    </style>-->
 </resources>
